# whatnext

./: .whatnext  CHANGELOG.md  Makefile  README.md  pyproject.toml  sample.md  tasks.md
.github/workflows/: publish.yml  tests.yml
docs/: basics.md  deferring.md  exclusions.md  index.md  next.md  prioritisation.md  sequential.md  usage.md
example/archived/projects/: tangerine.md
example/projects/: curtain.md  fountain.md  harvest.md  obelisk.md  tinsel.md
tasks/: deferring.md  documentation.md  listing.md  next.md  test_refactor.md  version_0.1.md  version_0.2.md  version_0.3.md  version_0.4.md  version_0.5.md  version_1.0.md  version_1.1.md  version_1.2.md  version_1.3.md
tests/: colour.bats  config.bats  deadline.bats  deferring.bats  edit.bats  invalid.md  list.bats  matching.bats  next.bats  queue.bats  summary.bats  terminology.bats  test_defer.py  test_edit.py  test_file.py  test_limit.py  test_output.py  test_priority.py  test_summary.py  test_task.py  usage.bats  version.bats
tests/config/: .whatnext  .whatnext.alt  apples.md  oranges.md
tests/deferring/: bare-after.md  needs-absolute.md  needs-subdir.md  phase-misplaced.md  phases-empty.md  phases-partial.md  phases-queue.md  phases.md  root-target.md  samename.md
tests/deferring/subdir/: needs-parent.md  needs-sibling.md  samename.md  target.md
tests/headerless/: annotation.md  deadline.md
tests/next/: append-after.md
tests/queue/: all-complete.md  blocked.md  in-progress.md  normal.md  prioritised.md
whatnext/: cli.py  guide.txt  models.py  next.py  summary.py  whatnext.py
