[project]
name = "whatnext"
version = "0.0.1"
description = "A lister of tasks found in Markdown files"
readme = "README.md"
authors = [{ name = "Mark Norman Francis"}]
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "cli",
    "markdown",
    "tasks",
    "todo",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "toml",
]

[project.urls]
Homepage = "https://github.com/norm/whatnext"
Repository = "https://github.com/norm/whatnext"
Documentation = "https://github.com/norm/whatnext"

[project.optional-dependencies]
test = [
    "flake8",
    "pytest",
]

[project.scripts]
whatnext = "whatnext.cli:main"

[tool.setuptools]
packages = ["whatnext"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
